--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -23,7 +23,7 @@ router-outlet {
 .menu, .content {
   position: relative;
   margin: 2vh auto;
-  height: 96%;
+  height: 96vh;
   width: 100%;
   border-radius: 4px;
   overflow: hidden;
