--- a/src/app/components/about/reviews/reviews.component.html
+++ b/src/app/components/about/reviews/reviews.component.html
@@ -3,13 +3,13 @@
 </h2>
 <div class="row row-block">
   <div class="col-6 card__wrapper" *ngFor="let review of reviews; let i = index;">
-    <div class="card">
+    <div class="card" (click)="showReviewDetails(review)">
       <div class="card__top-overlay stars-{{ review.starRating }} text-center">
         <h4 class="text-lg-1">
           {{ review.reviewTitle }}
         </h4>
         <div class="card__avatar">
-          <img src="assets/img/reviews/data/{{review.avatar}}" alt="{{ review.fullName }}" class="card__avatar__img">
+          <img src="{{review.avatar}}" alt="{{ review.fullName }}" class="card__avatar__img">
         </div>
       </div>
       <div class="card-block">
@@ -24,16 +24,24 @@
         </div>
         <ul class="table text-md-1">
           <li>
-            <div class="text-left">
+            <div class="table__cell text-left">
               {{ review.location }}
             </div>
-            <div class="text-right">
+            <div class="table__cell text-right">
               {{ review.createdOn }}
             </div>
           </li>
         </ul>
       </div>
+      <div class="card__hover-overlay">
+        <div class="card__hover-overlay__text text-md-1">
+          {{ 'reviews.card.see_more' | trans }}
+        </div>
+      </div>
     </div>
   </div>
 </div>
+<ng-template [ngIf]="null !== reviewDetails">
+  <app-review-details [details]="reviewDetails" (hideReviewDetails)="showReviewDetails($event)"></app-review-details>
+</ng-template>
 
